# the-sheep-in-tang-poetry

./: .gitignore  README.md  out.docx  pyproject.toml  sim-coculator.py  三月三日.txt  分析.md  唐詩中的"羊".md  唐詩中的"羊".md.backup  牛羊.txt  羊.txt  聯句.txt
analyse/: 2.愛民刺政之羊.txt  3.和平戰爭之羊.txt  4.自然閒適之羊.txt
analyse/1.悲傷失意之羊/: 1.悲傷失意之羊.txt  其他.txt  與今昔盛衰相關的.txt  與邊塞相關的.txt
analyze/: 1.悲傷失意之羊.txt  2.愛民刺政之羊.txt  3.自由閒適之羊.txt  牛羊.txt  犬羊.txt
analyze/已分析/: 牧羊.txt  羊馬.txt  羔羊.txt  雜.txt  驅羊.txt  黃羊.txt
archive/: 殘缺不全的.txt  誤計.txt  讀不懂的.txt  重收.txt
archive/0.殘誤重等/: 存疑的.txt  殘缺不全的.txt  誤計.txt  讀不懂的.txt  重收.txt
archive/1.人名和作爲姓氏的的羊/: 公羊.txt  姓羊.txt  弘羊.txt  桑弘羊.txt  樂羊.txt  羊何.txt  羊侃.txt  羊傅.txt  羊公.txt  羊叔子.txt  羊孫.txt  羊斟.txt  羊曇.txt  羊權.txt  羊欣.txt  羊濬.txt  羊玄保.txt  羊祜.txt  羊雍.txt
archive/2.地名中的羊/: 羊城.txt  羊腸.txt
archive/3.標題中的羊/: 标题羊.txt
archive/4.典故中的羊/: 五羊.txt  五羊皮.txt  亡羊.txt  入羊中.txt  叔寶羊車.txt  商羊.txt  夷羊.txt  求羊.txt  羊很狼貪.txt  羊舌.txt  羊裘.txt  羊角風.txt  羊酪.txt  羵羊.txt  虎皮羊質.txt  讓羊.txt  金華牧羊兒.txt  騎羊子.txt  （晉武帝）羊車.txt  （蘇武之）羊.txt  （衛玠）羊車.txt
archive/5.禮儀中的羊/: 羊雁禮.txt  青羊.txt  餼羊.txt
archive/6.宗教中的羊/: （佛道）羊車.txt
archive/7. 其他/: 不易歸類的.txt  沒有深意的.txt  犬羊.txt  石羊.txt  神羊.txt  羊腸.txt  食物羊.txt  （玩具）羊車.txt
