[tool.poetry]
name = "tang-poetry-analyse"
version = "0.1.0"
description = ""
authors = ["theocheng <zlz_gty@foxmail.com>"]
readme = "README.md"
packages = [{include = "tang_poetry_analyse"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
